# Objectness

./: .gitignore  BING.sh  cvt2yml.sh  ijcv2013.sh  pipeline.sh  pipeline2.sh
Src/: CMakeLists.txt  CmFile.cpp  CmFile.h  CmShow.cpp  CmShow.h  CmTimer.h  DataSetVOC.cpp  DataSetVOC.h  FilterTIG.cpp  FilterTIG.h  ImgContrastBB.h  Objectness.cpp  Objectness.h  kyheader.h  xml2yaml.m  yml.m
Src/LibLinear/: linear.cpp  train.c  tron.h
Src/apps/: ijcv2013.cpp  main.cpp  objNess.cpp  yaml2opencvyml.cpp
Src/vsproj/: Objectness.sln  Objectness.vcxproj  Objectness.vcxproj.filters  dirent.h  gettimeofday.c
Src/vsproj/sys/: time.h
